--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 				<div class="md-toolbar-tools" layout="row" layout-align="space-between center">
 					<a href="https://ltunes.gq/"><h2 flex="10" md-truncate><img src="https://ltunes.gq/assets/Logo.png" width="50" height="50">LTunes Player</h2></a>
 					
-					<p>Latency (Ping/Delay): {{Player.latency}}ms</p>
+					<p>Ping: {{Player.latency}}ms</p>
 					
 					<div layout="row" layout-align="center center">
 						<form ng-submit="$state.go('search', {q: searchQuery})" style="margin: 0;">
