--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
 
 			<md-toolbar class="md-hue-2" md-whiteframe="2dp">
 				<div class="md-toolbar-tools" layout="row" layout-align="space-between center">
-					<a href="https://ltunes.gq/"><h2 flex="10" md-truncate><img src="https://ltunes.gq/assets/Logo.png" width="50" height="50">LTunes Player</h2></a>
+					<a href="https://ltunes.gq/"><h2 flex="60" md-truncate><img src="https://ltunes.gq/assets/Logo.png" width="50" height="50">LTunes Player</h2></a>
 					
-					<p>Latency (Ping/Delay): {{Player.latency}}ms</p>
+					<p>Ping/Delay: {{Player.latency}}ms</p>
 					
 					<div layout="row" layout-align="center center">
 						<form ng-submit="$state.go('search', {q: searchQuery})" style="margin: 0;">
