--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 		<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://www.ltunes.gq/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://www.ltunes.gq/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://www.ltunes.gq/favicon-16x16.png">
+<link rel="manifest" href="https://www.ltunes.gq/site.webmanifest">
 	</head>
 	
 	<body ng-cloak layout="row">
@@ -21,7 +25,7 @@
 
 			<md-toolbar class="md-hue-2" md-whiteframe="2dp">
 				<div class="md-toolbar-tools" layout="row" layout-align="space-between center">
-					<a href="https://ltunes.gq/"><h2 flex="60" md-truncate><img src="https://ltunes.gq/assets/Logo.png" width="50" height="50">LTunes Player</h2></a>
+					<a href="https://ltunes.gq/"><h2 flex="10" md-truncate><img src="https://ltunes.gq/assets/Logo.png" width="50" height="50"></h2></a>
 					
 					<p>Ping/Delay: {{Player.latency}}ms</p>
 					
