--- a/public/index.html
+++ b/public/index.html
@@ -79,14 +79,14 @@
 			<playbar></playbar>
 		</section>
 		
-		<md-sidenav
+		<!--<md-sidenav
 			class="md-sidenav-right"
 			md-component-id="right"
 			md-is-locked-open="Player.pinnedQueue || $mdMedia('gt-md')"
 			md-whiteframe="10">
 			
 			<queue></queue>
-		</md-sidenav>
+		</md-sidenav>-->
 		
 		<!-- Angular Material requires Angular.js Libraries -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
