--- a/public/index.html
+++ b/public/index.html
@@ -133,8 +133,8 @@
 			}]);
 			
 			app.config(['$mdThemingProvider', function($mdThemingProvider) {
-				$mdThemingProvider.theme('light').primaryPalette('blue-grey');
-				$mdThemingProvider.theme('dark').primaryPalette('blue-grey').dark();
+				$mdThemingProvider.theme('light').primaryPalette('orange');
+				$mdThemingProvider.theme('dark').primaryPalette('orange').dark();
 				
 				$mdThemingProvider.setDefaultTheme('dark');
 				// $mdThemingProvider.enableBrowserColor({theme: 'dark'});
