--- a/public/index.html
+++ b/public/index.html
@@ -133,8 +133,8 @@
 			}]);
 			
 			app.config(['$mdThemingProvider', function($mdThemingProvider) {
-				$mdThemingProvider.theme('light').primaryPalette('neon-green');
-				$mdThemingProvider.theme('dark').primaryPalette('neon-green').dark();
+				$mdThemingProvider.theme('light').primaryPalette('green');
+				$mdThemingProvider.theme('dark').primaryPalette('green').dark();
 				
 				$mdThemingProvider.setDefaultTheme('dark');
 				// $mdThemingProvider.enableBrowserColor({theme: 'dark'});
