--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 			app.config(['$stateProvider', '$urlRouterProvider', function($stateProvider, $urlRouterProvider) {
 				var states = [
 					{
-						name: 'browse',
+						name: 'browse (Coming soon)',
 						url: '/',
 						templateUrl: 'views/browse/browse.html'
 					},
