--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
 						</md-button>
 					</div>
 				</div>
+				<md-tooltip md-direction="top">Show lyrics</md-tooltip>
 	    	</md-toolbar>
 		    
 		    <md-content flex>
