--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,16 @@
-<html lang="en" >
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<html lang="en" ng-controller="MainCtrl">
+	<head>
+		<title>
+			LTunes Player
+		</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://www.ltunes.gq/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://www.ltunes.gq/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://www.ltunes.gq/favicon-16x16.png">
+<link rel="manifest" href="https://www.ltunes.gq/site.webmanifest">
 	<style>
 		.track {
 			margin: 5px;
