--- a/public/index.html
+++ b/public/index.html
@@ -155,9 +155,9 @@
 				style="width: 100% !important;">
 			</audio>
 			
-			<md-button class="md-icon-button" ng-click="openLyrics($event)">
+			<!--<md-button class="md-icon-button" ng-click="openLyrics($event)">
 				<md-icon class="material-icons">music_note</md-icon>
-			</md-button>
+			</md-button>-->
 		</md-card>
 	</div>
 	
